# AutoGitaPosting

./: .env  .env.example  Main-gita data to be deleted.csv  PROJECT_CONTEXT.md  README.md  check_unicode.py  fix_csv_to_utf8.py  inspect_db.py  inspect_raw_encoding.py  list_raw_files.py  pyproject.toml  verify_devanagari_bytes.py
.github/workflows/: dataset.yml
artifacts/5e3652ef-6dcf-4648-8979-b3cddca17427/: caption.txt  run_report.json
data/: app.db
data/gita/: verses.json
data/sequence/: verses.xlsx
scripts/: build_verses_json.py  download_fonts.py
src/gita_autoposter/: cli.py  dataset.py  dataset_builder.py  observability.py  sequence_loader.py  validation.py
src/gita_autoposter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/gita_autoposter/agents/: __init__.py  commentary.py  commentary_agent.py  image_compose.py  image_generate.py  image_prompt.py  monitor.py  post_packager.py  poster.py  scheduler.py  sequence.py  verse_fetch.py
src/gita_autoposter/content/: commentary_prompt.py  image_style.py  style_guide.py
src/gita_autoposter/core/: __init__.py  config.py  contracts.py  orchestrator.py  repetition_guard.py  visual_intent.py
src/gita_autoposter/db/: __init__.py  database.py
src/gita_autoposter/tools/: image_provider.py  llm.py  meta_api.py
tests/: test_commentary.py  test_contracts.py  test_dataset.py  test_db.py  test_images.py  test_observability.py  test_orchestrator.py  test_poster.py  test_preview_image.py  test_scheduler.py  test_sequence.py  test_skipped_verses.py  test_visual_intent.py
